# tikhiy

./: CMakeLists.txt
TikhiyLogger/: CMakeLists.txt  TikhiyLogger.cpp  TikhiyLogger.h
